# SparkleDummyProject

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
